--- a/assets/static/css/app.css
+++ b/assets/static/css/app.css
@@ -1747,67 +1747,67 @@ body {
 }
 
 #main .swiper-slide #work-2 {
-	background-image: url(../../images/@stock/work-2.jpg);
+	background-image: url(/portfolio/liferay-documentation/screenshot-1.jpg);
 }
 
 #main .swiper-slide #work-3 {
-	background-image: url(../../images/@stock/work-3.jpg);
+	background-image: url(/portfolio/hubspot-microservice/banner.svg);
 }
 
 #main .swiper-slide #work-4 {
-	background-image: url(../../images/@stock/work-4.jpg);
+	background-image: url(/portfolio//screenshot.jpg);
 }
 
 #main .swiper-slide #work-5 {
-	background-image: url(../../images/@stock/work-5.jpg);
+	background-image: url(/portfolio//screenshot.jpg);
 }
 
 #main .swiper-slide #work-6 {
-	background-image: url(../../images/@stock/work-6.jpg);
+	background-image: url(/portfolio//screenshot.jpg);
 }
 
 #main .swiper-slide #work-7 {
-	background-image: url(../../images/@stock/work-7.jpg);
+	background-image: url(/portfolio//screenshot.jpg);
 }
 
 #main .swiper-slide #work-8 {
-	background-image: url(../../images/@stock/work-8.jpg);
+	background-image: url(/portfolio//screenshot.jpg);
 }
 
 #main .swiper-slide #work-9 {
-	background-image: url(../../images/@stock/work-9.jpg);
+	background-image: url(/portfolio//screenshot.jpg);
 }
 
 #main .swiper-slide #work-10 {
-	background-image: url(../../images/@stock/work-10.jpg);
+	background-image: url(/portfolio//screenshot.jpg);
 }
 
 #main .swiper-slide #work-11 {
-	background-image: url(../../images/@stock/work-11.jpg);
+	background-image: url(/portfolio//screenshot.jpg);
 }
 
 #main .swiper-slide #work-12 {
-	background-image: url(../../images/@stock/work-12.jpg);
+	background-image: url(/portfolio//screenshot.jpg);
 }
 
 #main .swiper-slide #work-13 {
-	background-image: url(../../images/@stock/work-13.jpg);
+	background-image: url(/portfolio//screenshot.jpg);
 }
 
 #main .swiper-slide #work-14 {
-	background-image: url(../../images/@stock/work-14.jpg);
+	background-image: url(/portfolio//screenshot.jpg);
 }
 
 #main .swiper-slide #work-15 {
-	background-image: url(../../images/@stock/work-15.jpg);
+	background-image: url(/portfolio//screenshot.jpg);
 }
 
 #main .swiper-slide #work-16 {
-	background-image: url(../../images/@stock/work-16.jpg);
+	background-image: url(/portfolio//screenshot.jpg);
 }
 
 #main .swiper-slide #work-17 {
-	background-image: url(../../images/@stock/work-17.jpg);
+	background-image: url(/portfolio//screenshot.jpg);
 }
 
 #about .swiper-slide {
