Added jetly and phillipchan.org to portfolio

--- a/assets/static/css/app.css
+++ b/assets/static/css/app.css
@@ -1763,11 +1763,11 @@ body {
 }
 
 #main .swiper-slide #work-6 {
-	background-image: url(/portfolio//screenshot.jpg);
+	background-image: url(/portfolio/phillipchanorg/cover.jpg);
 }
 
 #main .swiper-slide #work-7 {
-	background-image: url(/portfolio//screenshot.jpg);
+	background-image: url(/portfolio/jetly/cover.svg);
 }
 
 #main .swiper-slide #work-8 {
