SF + Email builder in portfolio

--- a/assets/static/css/app.css
+++ b/assets/static/css/app.css
@@ -1771,7 +1771,7 @@ body {
 }
 
 #main .swiper-slide #work-8 {
-	background-image: url(/portfolio//screenshot.jpg);
+	background-image: url(/portfolio/liferay-email-builder/screenshot.svg);
 }
 
 #main .swiper-slide #work-9 {
